<?xml version="1.0"?>
<package format="2">
  <name>driver_assistance_rl</name>
  <version>0.0.1</version>
  <description>
    Driver assistance reinforcement learning using ROS 2 and PyBullet
  </description>


  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Python dependencies (documented, installed via pip) -->
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
