<?xml version="1.0"?>
<package format="2">
  <name>driver_assistance_rl</name>
  <version>0.0.1</version>
  <description>
    Driver assistance reinforcement learning using ROS 2 and PyBullet.
    Adapted from DriverAssistanceSim.py to run as a distributed ROS2 system.
    Uses PPO agent for autonomous driving in simulated traffic environments.
  </description>
  <maintainer email="driver@assistant.com">Driver Assistance</maintainer>
  <license>1.0</license>
  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-pybullet</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
